--- a/package.json
+++ b/package.json
@@ -146,9 +146,11 @@
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/router": "^4.1.3",
     "@angular/service-worker": "^1.0.0-beta.14",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "intl": "^1.2.5",
+    "jquery": "^3.2.1",
     "primeng": "^4.0.3",
     "rxjs": "^5.2.0",
     "systemjs": "0.19.41",
